--- a/_html/cards.html
+++ b/_html/cards.html
@@ -8,12 +8,179 @@
             
             <!-- build:section header -->
             <!-- /build -->
-
-            <!-- page -->
-            <div class="page-full">
-				333
-            </div>
-            <!-- /page -->
+	
+			<!--main-card-head-box-->
+			<div class="main-card-head-box cnt-section">
+				<div class="inner-wrap">
+					<div class="main-title-wrap text-body">
+						<h1 class="main-title">A unique card for <br><span class="title-gradient gr09">cryptocurrency user.</span></h1>
+						<p>Open a card within some clicks. Deposit with crypto currency <br>Spend worldwide. More than 180 countries supported</p>
+					</div>
+					<div class="main-actions-qr-wrap">
+						<div class="action-button">
+							<a href="" class="btn-action-app">
+								<img src="./img/button-apple.svg" alt="">
+							</a>
+						</div>
+						<div class="action-button">
+							<a href="" class="btn-action-app">
+								<img src="./img/button-google.svg" alt="">
+							</a>
+						</div>
+						<div class="action-qr">
+							<div class="action-title">Scan to download App</div>
+							<div class="action-link">
+								<div class="btn-action-qr">
+									<img src="./img/button-qr.svg" alt="">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="photo-inner-wrap">
+						<div class="elm-photo">
+							<img src="./img/screen-card.png" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--/main-card-head-box-->
+	
+			<!--tiles-cards-second-box-->
+			<div class="tiles-cards-second-box cnt-section">
+				<div class="inner-wrap">
+					<div class="items-wrap">
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-card-second">
+								<div class="main-title-wrap text-body">
+									<h2 class="tile-title h2-title">Digital and Physical card</h2>
+									<p>Comming in Q1 2023. </p>
+								</div>
+								<div class="tile-inner-wrap">
+									<div class="tile-photo-wrap">
+										<div class="elm-screen-main screen-card">
+											<img src="./img/screen-card-second.png" alt="">
+										</div>
+									</div>
+									<div class="tile-info-wrap text-body">
+										<p>Euro or GBP debit card. <br>First plan is free card & account. <br>Virtual card and physical one.</p>
+										<div class="main-actions-wrap">
+											<div class="button-wrap">
+												<a href="" class="btn">Open account</a>
+											</div>
+											<div class="action-wrap">
+												<a href="" class="btn-action-more">Learn more</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-card-third">
+								<div class="tile-info-wrap">
+									<div class="main-title-wrap text-body">
+										<h2 class="tile-title title-gradient h2-title">Top up Credits card&nbsp;with crypto</h2>
+										<p>Open a card on Credits App and Top up it from crypto account. Transaction is executing 10 secs.</p>
+									</div>
+									<div class="main-buttons-wrap">
+										<div class="button-wrap">
+											<a href="" class="btn-action-app">
+												<img src="./img/button-apple.svg" alt="">
+											</a>
+										</div>
+										<div class="button-wrap">
+											<a href="" class="btn-action-app">
+												<img src="./img/button-google.svg" alt="">
+											</a>
+										</div>
+									</div>
+								</div>
+								<div class="tile-photo-wrap">
+									<div class="elm-photo">
+										<img src="./img/icons-second.png" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-card-four">
+								<div class="tile-info-wrap">
+									<div class="main-title-wrap text-body">
+										<div class="tile-subtitle">Many Top up options</div>
+										<div class="tile-title h2-title">With bank transfer. <br>From other card. <br>From crypto wallet.</div>
+									</div>
+									<div class="main-buttons-wrap">
+										<div class="button-wrap">
+											<a href="" class="btn-action-app">
+												<img src="./img/button-apple.svg" alt="">
+											</a>
+										</div>
+										<div class="button-wrap">
+											<a href="" class="btn-action-app">
+												<img src="./img/button-google.svg" alt="">
+											</a>
+										</div>
+									</div>
+								</div>
+								<div class="tile-photo-wrap">
+									<div class="elm-screen-main screen03">
+										<img src="./img/screen-card-third.png" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+					</div>
+				</div>
+			</div>
+			<!--/tiles-cards-second-box-->
+	
+			<!--tiles-cards-simple-box-->
+			<div class="tiles-cards-simple-box cnt-section no-ptop">
+				<div class="inner-wrap">
+					<div class="main-title-wrap">
+						<h2 class="h1-title title-gradient gr09">A simple card <br>for&nbsp;crypto user</h2>
+					</div>
+					<div class="items-wrap">
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-card-main tile-dark">
+								<img src="./img/card-bg.jpg" alt="" class="img-bg-cover">
+								<div class="tile-title-wrap">
+									<div class="main-title-wrap text-body">
+										<h2 class="tile-title h3-title">Pay online and&nbsp;offline</h2>
+										<p>Pay in shops and restaurants. </p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-card-main">
+								<div class="tile-title-wrap">
+									<div class="main-title-wrap text-body">
+										<h2 class="tile-title h3-title">Card available to use in your phone. </h2>
+										<p>Pay with the touch of your phone. </p>
+									</div>
+								</div>
+								<div class="tile-photo-wrap">
+									<div class="tile-photo">
+										<img src="./img/card-pay.svg" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+					</div>
+				</div>
+			</div>
+			<!--/tiles-cards-simple-box-->
             
             <!-- build:section footer -->
             <!-- /build -->
