--- a/_html/cryptoaccounts.html
+++ b/_html/cryptoaccounts.html
@@ -4,16 +4,311 @@
     <!-- /build -->
     <body>
         <!-- wrap -->
-        <div class="wrap">
+        <div class="wrap wrap-dark">
             
-            <!-- build:section header -->
+            <!-- build:section headerdark -->
             <!-- /build -->
-
-            <!-- page -->
-            <div class="page-full">
-				333
-            </div>
-            <!-- /page -->
+	
+			<!--main-top-box-->
+			<div class="main-top-box cnt-section type-second">
+				<div class="inner-wrap">
+					<div class="info-inner-wrap">
+						<div class="title-wrap text-body">
+							<h1 class="main-title">Buy USDT with <span class="title-gradient gr05">zero fee</span></h1>
+							<p>Download Credits App and Buy the most popular Staible USD token with Zero fee. </p>
+						</div>
+						<div class="actions-wrap">
+							<div class="action-button">
+								<a href="" class="btn-action-app">
+									<img src="./img/button-apple-light.svg" alt="">
+								</a>
+							</div>
+							<div class="action-button">
+								<a href="" class="btn-action-app">
+									<img src="./img/button-google-light.svg" alt="">
+								</a>
+							</div>
+							<div class="action-wrap">
+								<a href="" class="btn-action-more">Learn more</a>
+							</div>
+						</div>
+					</div>
+					<div class="photo-inner-wrap">
+						<div class="elm-screen-main screen-full">
+							<img src="./img/screen05.png" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--/main-top-box-->
+	
+			<!--tiles-attentions-box-->
+			<div class="tiles-attentions-box cnt-section no-ptop">
+				<div class="inner-wrap">
+					<div class="items-wrap">
+						<!--item wrap-->
+						<div class="item-wrap wrap-first">
+							<div class="item-tile-attention">
+								<div class="tile-title-wrap">
+									<div class="tile-title h3-title">Instant exchange and&nbsp;transfers</div>
+									<div class="tile-text text-body">The individual IBAN account in EUR from Credits can be opened online without visiting a bank.</div>
+								</div>
+								<div class="tile-action-wrap">
+									<a href="" class="btn button-light tile-button">Open account</a>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap wrap-second">
+							<div class="item-tile-attention tile-second">
+								<div class="tile-title-wrap">
+									<div class="tile-title h3-title">More then 40 Cryptocurrencies</div>
+								</div>
+								<div class="tile-photo-wrap">
+									<div class="tile-photo">
+										<img src="./img/icon.png" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap wrap-full">
+							<div class="item-tile-card">
+								<div class="tile-photo-wrap">
+									<div class="tile-photo">
+										<img src="./img/cards.png" alt="">
+									</div>
+								</div>
+								<div class="tile-info-wrap">
+									<div class="tile-title h2-title">Withdrawal only with <span class="title-gradient">card number.</span></div>
+									<div class="tile-text text-body">It takes for 1 min to get money on your card.</div>
+									<div class="main-buttons-wrap">
+										<div class="button-wrap">
+											<a href="" class="btn-action-app">
+												<img src="./img/button-apple-light.svg" alt="">
+											</a>
+										</div>
+										<div class="button-wrap">
+											<a href="" class="btn-action-app">
+												<img src="./img/button-google-light.svg" alt="">
+											</a>
+										</div>
+										<div class="action-wrap">
+											<a href="" class="btn-action-more">Learn more</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+					</div>
+				</div>
+			</div>
+			<!--/tiles-attentions-box-->
+	
+			<!--tiles-top-box-->
+			<div class="tiles-top-box cnt-section">
+				<div class="inner-wrap">
+					<div class="main-title-wrap text-body">
+						<h2 class="h1-title">Top up</h2>
+					</div>
+					<div class="items-outer-wrap">
+						<div class="items-inner-wrap">
+							<div class="items-wrap">
+								<!--item wrap-->
+								<div class="item-wrap">
+									<div class="item-tile-top">
+										<div class="tile-photo-wrap">
+											<img src="./img/top01.svg" alt="">
+										</div>
+										<div class="tile-info-wrap">
+											<div class="tile-info">Instant account deposit and </div>
+										</div>
+									</div>
+								</div>
+								<!--/item wrap-->
+								<!--item wrap-->
+								<div class="item-wrap">
+									<div class="item-tile-top">
+										<div class="tile-photo-wrap">
+											<img src="./img/top02.svg" alt="">
+										</div>
+										<div class="tile-info-wrap">
+											<div class="tile-info">The cheapest  method  </div>
+										</div>
+									</div>
+								</div>
+								<!--/item wrap-->
+							</div>
+						</div>
+						<div class="photo-inner-wrap">
+							<div class="elm-screen-main screen-full">
+								<img src="./img/screen06.png" alt="">
+							</div>
+						</div>
+						<div class="items-inner-wrap">
+							<div class="items-wrap">
+								<!--item wrap-->
+								<div class="item-wrap">
+									<div class="item-tile-top">
+										<div class="tile-photo-wrap">
+											<img src="./img/top03.svg" alt="" class="img-shadow">
+										</div>
+										<div class="tile-info-wrap">
+											<div class="tile-info">40+ top cryptocurrencies</div>
+										</div>
+									</div>
+								</div>
+								<!--/item wrap-->
+								<!--item wrap-->
+								<div class="item-wrap">
+									<div class="item-tile-top">
+										<div class="tile-photo-wrap">
+											<img src="./img/top04.svg" alt="">
+										</div>
+										<div class="tile-info-wrap">
+											<div class="tile-info">Coming soon </div>
+										</div>
+									</div>
+								</div>
+								<!--/item wrap-->
+							</div>
+						</div>
+					</div>
+					<div class="main-buttons-wrap">
+						<div class="button-wrap">
+							<a href="" class="btn-action-app">
+								<img src="./img/button-apple.svg" alt="">
+							</a>
+						</div>
+						<div class="button-wrap">
+							<a href="" class="btn-action-app">
+								<img src="./img/button-google.svg" alt="">
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--/tiles-top-box-->
+	
+			<!--tiles-exchange-box-->
+			<div class="tiles-exchange-box cnt-section no-ptop">
+				<div class="inner-wrap">
+					<div class="items-wrap">
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-exchange">
+								<div class="tile-info-wrap text-body">
+									<div class="tile-subtitle">Exchange</div>
+									<div class="tile-title h2-title">Fiat to Crypto. <br>Crypto to Crypto.</div>
+									<div class="tile-text">We analyze many markets to give you the best rates</div>
+									<div class="main-actions-wrap">
+										<div class="button-wrap">
+											<a href="" class="btn button-light">Open account</a>
+										</div>
+										<div class="action-wrap">
+											<a href="" class="btn-action-more button-light">Learn more</a>
+										</div>
+									</div>
+								</div>
+								<div class="tile-photo-wrap">
+									<div class="tile-photo">
+										<img src="./img/logos.svg" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+					</div>
+				</div>
+			</div>
+			<!--/tiles-exchange-box-->
+	
+			<!--tiles-cards-box-->
+			<div class="tiles-cards-box cnt-section no-ptop">
+				<div class="inner-wrap">
+					<div class="main-title-wrap">
+						<h2 class="h1-title">Withdrawal</h2>
+					</div>
+					<div class="items-wrap">
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-cards">
+								<div class="tile-info-wrap text-body">
+									<div class="tile-subtitle">To card</div>
+									<div class="tile-title h5-title">Only card number to&nbsp;get money</div>
+									<div class="main-actions-wrap">
+										<div class="action-wrap">
+											<a href="" class="btn-action-more button-light">Learn more</a>
+										</div>
+									</div>
+								</div>
+								<div class="tile-photo-wrap">
+									<div class="tile-photo">
+										<img src="./img/cards01.png" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-cards tile-bg-light">
+								<div class="tile-info-wrap text-body">
+									<div class="tile-subtitle">To bank account</div>
+									<div class="tile-title h5-title title-gradient">The cheapest  withdrawal</div>
+									<div class="main-actions-wrap">
+										<div class="action-wrap">
+											<a href="" class="btn-action-more">Learn more</a>
+										</div>
+									</div>
+								</div>
+								<div class="tile-photo-wrap photo-small">
+									<div class="tile-photo">
+										<img src="./img/cards02.svg" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-cards tile-bg-dark">
+								<div class="tile-info-wrap text-body">
+									<div class="tile-subtitle">PayPal & Skrill</div>
+									<div class="tile-title h5-title">Modern payment methods</div>
+									<div class="main-actions-wrap">
+										<div class="action-wrap">
+											<a href="">Coming soon</a>
+										</div>
+									</div>
+								</div>
+								<div class="tile-photo-wrap photo-small">
+									<div class="tile-photo">
+										<img src="./img/cards03.svg" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+					</div>
+					<div class="main-buttons-wrap">
+						<div class="button-wrap">
+							<a href="" class="btn-action-app">
+								<img src="./img/button-apple.svg" alt="">
+							</a>
+						</div>
+						<div class="button-wrap">
+							<a href="" class="btn-action-app">
+								<img src="./img/button-google.svg" alt="">
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--/tiles-cards-box-->
             
             <!-- build:section footer -->
             <!-- /build -->
