--- a/about.html
+++ b/about.html
@@ -109,11 +109,324 @@
         </header>
         <!-- /header -->
 
-        <!-- page -->
-        <div class="page-full">
-            333
+        <!--main-about-head-box-->
+        <div class="main-about-head-box cnt-section">
+            <div class="inner-wrap">
+                <div class="main-title-wrap text-body-large">
+                    <h1 class="main-title">A global crypto bank.</h1>
+                    <p>Our goal for 2024-2025 is to give 1.5 billion people a&nbsp;fully fledged Digital Crypto bank.</p>
+                </div>
+            </div>
         </div>
-        <!-- /page -->
+        <!--/main-about-head-box-->
+
+        <!--tiles-about-box-->
+        <div class="tiles-about-box cnt-section">
+            <div class="inner-wrap">
+                <div class="main-title-wrap">
+                    <h2 class="h1-title">We’ve already completed the&nbsp;goal in some countries.</h2>
+                </div>
+                <div class="items-wrap">
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-about">
+                            <div class="tile-title-wrap">
+                                <div class="tile-title title-gradient h5-title">Europe </div>
+                                <div class="tile-ico">
+                                    <img src="./img/01.png" alt="">
+                                </div>
+                                <div class="tile-text text-body-small">IBANs, VISA Cards Payments, Crypto </div>
+                            </div>
+                            <div class="tile-info-wrap">
+                                <div class="tile-info-title h5-title">Available</div>
+                                <div class="tile-text text-body-small">Card integration</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-about">
+                            <div class="tile-title-wrap">
+                                <div class="tile-title title-gradient h5-title">Hong Kong</div>
+                                <div class="tile-ico">
+                                    <img src="./img/02.png" alt="">
+                                </div>
+                                <div class="tile-text text-body-small">UnionPay card, Accounts Payments, Crypto </div>
+                            </div>
+                            <div class="tile-info-wrap">
+                                <div class="tile-info-title h5-title">Q2 2023</div>
+                                <div class="tile-text text-body-small">Card integration</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-about">
+                            <div class="tile-title-wrap">
+                                <div class="tile-title title-gradient h5-title">Mexico</div>
+                                <div class="tile-ico">
+                                    <img src="./img/03.png" alt="">
+                                </div>
+                                <div class="tile-text text-body-small">VISA card, Accounts Payments, Crypto </div>
+                            </div>
+                            <div class="tile-info-wrap">
+                                <div class="tile-info-title h5-title">Q3 2023</div>
+                                <div class="tile-text text-body-small">Ready to launch</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-about">
+                            <div class="tile-title-wrap">
+                                <div class="tile-title title-gradient h5-title">Brazil</div>
+                                <div class="tile-ico">
+                                    <img src="./img/04.png" alt="">
+                                </div>
+                                <div class="tile-text text-body-small">VISA card, Accounts Payments, Crypto </div>
+                            </div>
+                            <div class="tile-info-wrap">
+                                <div class="tile-info-title h5-title">Q3 2023</div>
+                                <div class="tile-text text-body-small">Ready to launch</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                </div>
+            </div>
+        </div>
+        <!--/tiles-about-box-->
+
+        <!--main-about-tiles-box-->
+        <div class="main-about-tiles-box cnt-section">
+            <div class="inner-wrap">
+                <div class="main-title-wrap">
+                    <h2 class="main-title title-gradient">For everyone.</h2>
+                </div>
+                <div class="box-inner-wrap">
+                    <div class="title-inner-wrap">
+                        <h3 class="main-title">Banking. <br>Payments. <br>Crypto. <br>Investing.</h3>
+                    </div>
+                    <div class="photo-inner-wrap">
+                        <div class="elm-screen-main screen04">
+                            <img src="./img/screen10.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="items-inner-wrap">
+                    <div class="items-wrap">
+                        <!--item wrap-->
+                        <div class="item-wrap">
+                            <div class="item-tile-about-main">
+                                <div class="tile-info-wrap text-body-small">
+                                    <div class="tile-subtitle">Wallet</div>
+                                    <div class="tile-title h4-title">IBAN accounts and&nbsp;Debit cards</div>
+                                    <p>Our mission is to be the services <br>provider with banking, cryptocurrency and investment products all in one place.</p>
+                                </div>
+                                <div class="tile-photo-wrap text-body-small">
+                                    <div class="elm-screen-main screen-card">
+                                        <img src="./img/card-about.png" alt="">
+                                    </div>
+                                    <div class="tile-photo-title">Comming in Q1 2023</div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--/item wrap-->
+                        <!--item wrap-->
+                        <div class="item-wrap">
+                            <div class="item-tile-about-second">
+                                <div class="tile-photo-wrap">
+                                    <div class="tile-photo">
+                                        <img src="./img/screen11.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="tile-info-wrap text-body-small">
+                                    <div class="tile-subtitle">Payments</div>
+                                    <div class="tile-title h4-title">Worldwide and&nbsp;local payments</div>
+                                    <p>Pay and receive money from anybody like in ordinary bank.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--/item wrap-->
+                        <!--item wrap-->
+                        <div class="item-wrap wrap-half">
+                            <div class="item-tile-about-third">
+                                <div class="tile-info-wrap text-body-small">
+                                    <div class="tile-subtitle">Crypto wallet</div>
+                                    <div class="tile-title h4-title">Buy, sell, store and&nbsp;exchange cryptocurrency </div>
+                                </div>
+                                <div class="tile-photo-wrap">
+                                    <div class="tile-photo">
+                                        <img src="./img/icons-about.svg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--/item wrap-->
+                        <!--item wrap-->
+                        <div class="item-wrap wrap-half">
+                            <div class="item-tile-about-four">
+                                <div class="tile-info-wrap text-body-small">
+                                    <div class="tile-subtitle">Investing. Comming in Q1 2023</div>
+                                    <div class="tile-title h4-title">Invest in top worldwide companies </div>
+                                </div>
+                                <div class="tile-photo-wrap">
+                                    <div class="tile-photo photo-main">
+                                        <img src="./img/icons-phone-about.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--/item wrap-->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--/main-about-tiles-box-->
+
+        <!--main-about-head-box-->
+        <div class="main-about-head-box cnt-section type-second">
+            <div class="inner-wrap">
+                <div class="main-title-wrap text-body-large">
+                    <h2 class="main-title title-gradient">Credits.com bridges banking with crypto.</h2>
+                    <p>Everything is faster than using a bank or a crypto exchange. Everything is completed easily inside the Credits app. <br>By bypassing intermediaries and completing banking and cryptocurrency transactions inside a single Platform, Credits makes the transfer from crypto to fiat and back much cheaper. For just One Third of the Price.</p>
+                </div>
+            </div>
+        </div>
+        <!--/main-about-head-box-->
+
+        <!--tiles-about-box-->
+        <div class="tiles-about-box cnt-section">
+            <div class="inner-wrap">
+                <div class="main-title-wrap">
+                    <h2 class="h1-title">Security and Service</h2>
+                </div>
+                <div class="items-wrap items-main">
+                    <!--item wrap-->
+                    <div class="item-wrap wrap-half">
+                        <div class="item-tile-about-title">
+                            <div class="tile-info-wrap text-body-small">
+                                <div class="tile-subtitle">Security</div>
+                            </div>
+                            <div class="tile-title-wrap">
+                                <div class="tile-title h3-title">The highest level of security for&nbsp;customer. </div>
+                            </div>
+                            <div class="main-actions-wrap">
+                                <div class="button-wrap">
+                                    <a href="" class="btn button-light">Open account</a>
+                                </div>
+                                <div class="action-wrap">
+                                    <a href="" class="btn-action-more button-light">Learn more</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap wrap-half">
+                        <div class="item-tile-about-text">
+                            <div class="tile-text-wrap text-body-large">
+                                <div class="tile-text">Credits holds all funds on separate accounts like a traditionally licensed bank. Neither the Credits Company nor anybody else has access to the customer's funds except the Customer themselves.</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap wrap-main">
+                        <div class="item-tile-about-text">
+                            <div class="tile-text-wrap text-body-large">
+                                <div class="tile-text">This is a fully fledged Digital bank. <br>Credits gives the opportunity to have settlement accounts, accept money and cryptocurrency, as well as transfers from anyone. Customers can receive their salaries, or pay utilities, etc.</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap wrap-small">
+                        <div class="item-tile-about-title tile-second">
+                            <div class="tile-info-wrap text-body-small">
+                                <div class="tile-subtitle">Service</div>
+                            </div>
+                            <div class="tile-title-wrap">
+                                <div class="tile-title h3-title">Full payment service for users </div>
+                            </div>
+                            <div class="main-actions-wrap">
+                                <div class="button-wrap">
+                                    <a href="" class="btn button-light">Open account</a>
+                                </div>
+                                <div class="action-wrap">
+                                    <a href="" class="btn-action-more button-light">Learn more</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                </div>
+            </div>
+        </div>
+        <!--/tiles-about-box-->
+
+        <!--main-news-box-->
+        <div class="main-news-box cnt-section">
+            <div class="inner-wrap">
+                <div class="main-title-wrap">
+                    <h2 class="h1-title">Our latest news</h2>
+                </div>
+                <div class="items-wrap">
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <a href="" class="item-tile-new">
+                            <span class="tile-photo-wrap">
+                                <span class="tile-photo photo-cover">
+                                    <img src="./img/new01.jpg" alt="">
+                                </span>
+                            </span>
+                            <span class="tile-info-wrap text-body">
+                                <span class="tile-title">Credits Wallet Updates</span>
+                                <span class="tile-date">27 Oct 2022</span>
+                            </span>
+                        </a>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <a href="" class="item-tile-new">
+                            <span class="tile-photo-wrap">
+                                <span class="tile-photo photo-cover">
+                                    <img src="./img/new02.jpg" alt="">
+                                </span>
+                            </span>
+                            <span class="tile-info-wrap text-body">
+                                <span class="tile-title">Credits Wallet Updates</span>
+                                <span class="tile-date">27 Oct 2022</span>
+                            </span>
+                        </a>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <a href="" class="item-tile-new">
+                            <span class="tile-photo-wrap">
+                                <span class="tile-photo photo-cover">
+                                    <img src="./img/new03.jpg" alt="">
+                                </span>
+                            </span>
+                            <span class="tile-info-wrap text-body">
+                                <span class="tile-title">Become the first customer of&nbsp;Credits Wallet!</span>
+                                <span class="tile-date">27 Oct 2022</span>
+                            </span>
+                        </a>
+                    </div>
+                    <!--/item wrap-->
+                </div>
+                <div class="more-wrap">
+                    <a href="" class="btn button-border">Read our news</a>
+                </div>
+            </div>
+        </div>
+        <!--/main-news-box-->
 
 
         <!-- footer -->
