--- a/_html/payments.html
+++ b/_html/payments.html
@@ -8,12 +8,141 @@
             
             <!-- build:section header -->
             <!-- /build -->
-
-            <!-- page -->
-            <div class="page-full">
-				333
-            </div>
-            <!-- /page -->
+	
+			<!--main-payment-head-box-->
+			<div class="main-payment-head-box cnt-section">
+				<div class="inner-wrap">
+					<div class="main-title-wrap text-body">
+						<h1 class="main-title"><span class="title-gradient gr05">Full payment</span><br> crypto banking App</h1>
+					</div>
+					<div class="main-actions-qr-wrap">
+						<div class="action-button">
+							<a href="" class="btn-action-app">
+								<img src="./img/button-apple.svg" alt="">
+							</a>
+						</div>
+						<div class="action-button">
+							<a href="" class="btn-action-app">
+								<img src="./img/button-google.svg" alt="">
+							</a>
+						</div>
+						<div class="action-qr">
+							<div class="action-title">Scan to download App</div>
+							<div class="action-link">
+								<div class="btn-action-qr">
+									<img src="./img/button-qr.svg" alt="">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--/main-payment-head-box-->
+	
+			<!--main-payment-box-->
+			<div class="main-payment-box cnt-section">
+				<div class="inner-wrap">
+					<div class="box-inner-wrap">
+						<div class="title-inner-wrap">
+							<h2 class="h2-title"><span class="title-gradient gr05">Transfer money</span> on&nbsp;Credits like in&nbsp;ordinary bank</h2>
+						</div>
+						<div class="photo-inner-wrap">
+							<div class="elm-photo">
+								<img src="./img/screen08.png" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--/main-payment-box-->
+	
+			<!--main-countries-box-->
+			<div class="main-countries-box cnt-section">
+				<div class="inner-wrap">
+					<div class="elm-photo">
+						<img src="./img/screen09.png" alt="">
+					</div>
+				</div>
+			</div>
+			<!--/main-countries-box-->
+	
+			<!--tiles-payments-box-->
+			<div class="tiles-payments-box cnt-section">
+				<div class="inner-wrap">
+					<div class="main-title-wrap">
+						<h2 class="h1-title">Instant Payments, Deposits, Withdrawals Fiat and Crypto.</h2>
+					</div>
+					<div class="items-inner-wrap">
+						<div class="items-wrap">
+							<!--item wrap-->
+							<div class="item-wrap">
+								<div class="item-tile-payment">
+									<div class="tile-title-wrap text-body">
+										<div class="tile-subtitle">Send cryptocurrency</div>
+										<div class="tile-title h5-title title-gradient gr08">To public key via&nbsp;blockchain</div>
+										<a href="" class="btn-action-more">Learn more</a>
+									</div>
+									<div class="tile-photo-wrap photo-main">
+										<div class="tile-photo">
+											<img src="./img/payment01.png" alt="">
+										</div>
+									</div>
+								</div>
+							</div>
+							<!--/item wrap-->
+							<!--item wrap-->
+							<div class="item-wrap">
+								<div class="item-tile-payment">
+									<div class="tile-title-wrap text-body">
+										<div class="tile-subtitle">To bank transfers</div>
+										<div class="tile-title h5-title title-gradient gr08">The cheapest  method to&nbsp;withdrawal money </div>
+										<a href="" class="btn-action-more">Learn more</a>
+									</div>
+									<div class="tile-photo-wrap">
+										<div class="tile-photo">
+											<img src="./img/payment02.svg" alt="">
+										</div>
+									</div>
+								</div>
+							</div>
+							<!--/item wrap-->
+							<!--item wrap-->
+							<div class="item-wrap">
+								<div class="item-tile-payment">
+									<div class="tile-title-wrap text-body">
+										<div class="tile-subtitle">By card </div>
+										<div class="tile-title h5-title title-gradient gr08">Instant payments by VISA and Mastercard</div>
+										<a href="" class="btn-action-more">Learn more</a>
+									</div>
+									<div class="tile-photo-wrap">
+										<div class="tile-photo">
+											<img src="./img/payment03.svg" alt="">
+										</div>
+									</div>
+								</div>
+							</div>
+							<!--/item wrap-->
+							<!--item wrap-->
+							<div class="item-wrap">
+								<div class="item-tile-payment">
+									<div class="tile-title-wrap text-body">
+										<div class="tile-subtitle">Coming soon</div>
+										<div class="tile-title h5-title title-gradient gr08">Deposits and  withdrawals worldwide</div>
+										<a href="" class="btn-action-more">Learn more</a>
+									</div>
+									<div class="tile-photo-wrap">
+										<div class="tile-photo">
+											<img src="./img/payment04.svg" alt="">
+										</div>
+									</div>
+								</div>
+							</div>
+							<!--/item wrap-->
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--/tiles-payments-box-->
             
             <!-- build:section footer -->
             <!-- /build -->
