--- a/main.html
+++ b/main.html
@@ -116,7 +116,7 @@
                     <div class="title-wrap">
                         <h1 class="main-title title-gradient">Join the Fastest Growing Banking Crypto&nbsp;App.</h1>
                     </div>
-                    <div class="actions-wrap">
+                    <div class="main-actions-qr-wrap">
                         <div class="action-button">
                             <a href="" class="btn-action-app">
                                 <img src="./img/button-apple.svg" alt="">
