--- a/_html/cryptoaccounts.html
+++ b/_html/cryptoaccounts.html
@@ -17,13 +17,13 @@
 							<h1 class="main-title">Buy USDT with <span class="title-gradient gr05">zero fee</span></h1>
 							<p>Download Credits App and Buy the most popular Staible USD token with Zero fee. </p>
 						</div>
-						<div class="actions-wrap">
-							<div class="action-button">
+						<div class="main-buttons-wrap">
+							<div class="button-wrap">
 								<a href="" class="btn-action-app">
 									<img src="./img/button-apple-light.svg" alt="">
 								</a>
 							</div>
-							<div class="action-button">
+							<div class="button-wrap">
 								<a href="" class="btn-action-app">
 									<img src="./img/button-google-light.svg" alt="">
 								</a>
