--- a/_html/cryptoaccounts.html
+++ b/_html/cryptoaccounts.html
@@ -33,7 +33,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="photo-inner-wrap">
+					<div class="photo-inner-wrap photo-back">
 						<div class="elm-screen-main screen-full">
 							<img src="./img/screen05.png" alt="">
 						</div>
@@ -215,7 +215,8 @@
 								</div>
 								<div class="tile-photo-wrap">
 									<div class="tile-photo">
-										<img src="./img/logos.svg" alt="">
+										<img src="./img/logos01.svg" alt="">
+										<img src="./img/logos02.svg" alt="">
 									</div>
 								</div>
 							</div>
