--- a/_html/main.html
+++ b/_html/main.html
@@ -77,7 +77,7 @@
 								</div>
 								<div class="tile-photo-wrap">
 									<div class="tile-photo">
-										<img src="./img/credit01.svg" alt="">
+										<img src="./img/credit01.png" alt="">
 									</div>
 								</div>
 							</div>
@@ -213,7 +213,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="tile-photo-wrap">
+								<div class="tile-photo-wrap photo-map">
 									<div class="tile-photo">
 										<img src="./img/map.svg" alt="">
 									</div>
@@ -290,8 +290,11 @@
 						</div>
 						<div class="box-inner-wrap">
 							<div class="photo-inner-wrap">
-								<div class="elm-screen-main screen-card">
+								<!--<div class="elm-screen-main screen-card">
 									<img src="./img/card.png" alt="">
+								</div>-->
+								<div class="elm-screen-main screen-card">
+									<img src="./img/card-about.svg" alt="">
 								</div>
 							</div>
 							<div class="info-inner-wrap">
