--- a/_html/payments.html
+++ b/_html/payments.html
@@ -13,7 +13,7 @@
 			<div class="main-payment-head-box cnt-section">
 				<div class="inner-wrap">
 					<div class="main-title-wrap text-body">
-						<h1 class="main-title"><span class="title-gradient gr05">Full payment</span><br> crypto banking App</h1>
+						<h1 class="main-title"><span class="title-gradient">Full payment</span><br> crypto banking App</h1>
 					</div>
 					<div class="main-actions-qr-wrap">
 						<div class="action-button">
@@ -44,7 +44,7 @@
 				<div class="inner-wrap">
 					<div class="box-inner-wrap">
 						<div class="title-inner-wrap">
-							<h2 class="h2-title"><span class="title-gradient gr05">Transfer money</span> on&nbsp;Credits like in&nbsp;ordinary bank</h2>
+							<h2 class="h2-title"><span class="title-gradient">Transfer money</span> on&nbsp;Credits like in&nbsp;ordinary bank</h2>
 						</div>
 						<div class="photo-inner-wrap">
 							<div class="elm-photo">
