--- a/main.html
+++ b/main.html
@@ -177,7 +177,7 @@
                             </div>
                             <div class="tile-photo-wrap">
                                 <div class="tile-photo">
-                                    <img src="./img/credit01.svg" alt="">
+                                    <img src="./img/credit01.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -313,7 +313,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="tile-photo-wrap">
+                            <div class="tile-photo-wrap photo-map">
                                 <div class="tile-photo">
                                     <img src="./img/map.svg" alt="">
                                 </div>
@@ -390,8 +390,11 @@
                     </div>
                     <div class="box-inner-wrap">
                         <div class="photo-inner-wrap">
+                            <!--<div class="elm-screen-main screen-card">
+									<img src="./img/card.png" alt="">
+								</div>-->
                             <div class="elm-screen-main screen-card">
-                                <img src="./img/card.png" alt="">
+                                <img src="./img/card-about.svg" alt="">
                             </div>
                         </div>
                         <div class="info-inner-wrap">
