--- a/_html/about.html
+++ b/_html/about.html
@@ -128,7 +128,7 @@
 									</div>
 									<div class="tile-photo-wrap text-body-small">
 										<div class="elm-screen-main screen-card">
-											<img src="./img/card-about.png" alt="">
+											<img src="./img/card-about.svg" alt="">
 										</div>
 										<div class="tile-photo-title">Comming in Q1 2023</div>
 									</div>
@@ -174,9 +174,8 @@
 										<div class="tile-title h4-title">Invest in top worldwide companies </div>
 									</div>
 									<div class="tile-photo-wrap">
-										<div class="tile-photo photo-main">
-											<img src="./img/icons-phone-about.png" alt="">
-										</div>
+											<div class="tile-photo photo-main"><img src="./img/icons-about-second.svg" alt=""></div>
+											<div class="tile-photo photo-second"><img src="./img/phone-about.svg" alt=""></div>
 									</div>
 								</div>
 							</div>
