--- a/_html/cards.html
+++ b/_html/cards.html
@@ -59,7 +59,7 @@
 								<div class="tile-inner-wrap">
 									<div class="tile-photo-wrap">
 										<div class="elm-screen-main screen-card">
-											<img src="./img/screen-card-second.png" alt="">
+											<img src="./img/card-about.svg" alt="">
 										</div>
 									</div>
 									<div class="tile-info-wrap text-body">
@@ -100,7 +100,7 @@
 								</div>
 								<div class="tile-photo-wrap">
 									<div class="elm-photo">
-										<img src="./img/icons-second.png" alt="">
+										<img src="./img/icons-second.svg" alt="">
 									</div>
 								</div>
 							</div>
@@ -144,7 +144,7 @@
 			<div class="tiles-cards-simple-box cnt-section no-ptop">
 				<div class="inner-wrap">
 					<div class="main-title-wrap">
-						<h2 class="h1-title title-gradient gr09">A simple card <br>for&nbsp;crypto user</h2>
+						<h2 class="h1-title title-gradient">A simple card <br>for&nbsp;crypto user</h2>
 					</div>
 					<div class="items-wrap">
 						<!--item wrap-->
