--- a/cryptoaccounts.html
+++ b/cryptoaccounts.html
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="photo-inner-wrap">
+                <div class="photo-inner-wrap photo-back">
                     <div class="elm-screen-main screen-full">
                         <img src="./img/screen05.png" alt="">
                     </div>
@@ -315,7 +315,8 @@
                             </div>
                             <div class="tile-photo-wrap">
                                 <div class="tile-photo">
-                                    <img src="./img/logos.svg" alt="">
+                                    <img src="./img/logos01.svg" alt="">
+                                    <img src="./img/logos02.svg" alt="">
                                 </div>
                             </div>
                         </div>
